@@ -3,6 +3,7 @@ Emulation fixes:
  - Core: Fix first event scheduling after loading savestate
  - GB Serialize: Fix switching speed modes when loading a state (fixes mgba.io/i/2097)
  - GBA Memory: Fix loading Thumb savestates when in ARM mode
+ - GBA Video: Fix window start on modes 3-5 with mosaic (fixes mgba.io/i/1690)
 Other fixes:
  - GBA: Fix non-USA 1.0 FireRed misdetecting as a ROM hack (fixes mgba.io/i/2100)
  - GBA: Fix crash when ROM loading fails
